# rugosa

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.cfg
docs/: CPUEmulation.md  EmulatorPlugin.md  Regex.md  Shell.md  YARA.md
rugosa/: __init__.py  disassembly.py  func_utils.py  re.py  shell.py  strings.py  yara.py
rugosa/emulation/: __init__.py  actions.py  cpu_context.py  emulator.py  exceptions.py  flowchart.py  functions.py  instruction.py  memory.py  objects.py  opcode.py  operands.py  registers.py  registry.py  utils.py  variables.py
rugosa/emulation/ARM/: __init__.py  instruction.py  opcodes.py  operands.py
rugosa/emulation/call_hooks/: __init__.py
rugosa/emulation/call_hooks/stdlib/: __init__.py  libc.py
rugosa/emulation/call_hooks/win_api/: advapi32.py  constants.py  kernel32.py  shell32.py  shlwapi.py  ws2_32.py
rugosa/emulation/x86_64/: fpu_opcodes.py  instruction.py  opcodes.py  operands.py  registers.py
rugosa/ghidra_plugin/: install.py
rugosa/ghidra_plugin/components/: function_arguments.py  memory.py  stdout.py  variables.py
rugosa/ghidra_plugin/gui/: context_menu.py  mouse_listener.py  table.py
rugosa/ghidra_plugin/java/plugin/: EmulatorForm.java  GoToListingAction.java  RugosaActionListener.java  RugosaChangeListener.java  RugosaContextMenuEntry.java  RugosaPlugin.java  RugosaProgramListener.java  RugosaTabbedPane.java  RugosaTask.java
rugosa/ida_plugin/: uninstall.py  util.py
rugosa/ida_plugin/components/: __init__.py  actions.py  function_arguments.py  operands.py  registers.py  stdout.py  variables.py
rugosa/ida_plugin/gui/: emulator.py  emulator.ui
src/rugosa/: __init__.py  disassembly.py  func_utils.py  objects.py  re.py  shell.py  strings.py
src/rugosa/config/: __init__.py  __main__.py  settings.toml
src/rugosa/emulation/: __init__.py  actions.py  constants.py  cpu_context.py  emulator.py  exceptions.py  flowchart.py  functions.py  instruction.py  memory.py  monitor.py  monitors.py  objects.py  operands.py  registers.py  stack_strings.py  tracing.py  utils.py  variables.py
src/rugosa/emulation/ARM/: __init__.py  opcodes.py  registers.py
src/rugosa/emulation/call_hooks/: __init__.py
src/rugosa/emulation/call_hooks/stdlib/: libc.py
src/rugosa/emulation/call_hooks/win_api/: __init__.py  advapi32.py  kernel32.py  win_constants.py  ws2_32.py
src/rugosa/emulation/x86_64/: __init__.py  fpu_opcodes.py  instruction.py  opcodes.py  registers.py
src/rugosa/ghidra_plugin/components/: actions.py  call_history.py  emulator.py  function_arguments.py  operands.py  registers.py  variables.py
src/rugosa/ghidra_plugin/gui/: error_msg.py  program_listener.py
src/rugosa/ghidra_plugin/java/plugin/: EmulatorForm.form  RugosaComponentProvider.java  RugosaDockingAction.java
src/rugosa/ida_plugin/: install.py  plugin.py  rugosa.py
src/rugosa/ida_plugin/components/: call_history.py  emulator.py  memory.py
tests/: conftest.py  test_issues.py  test_re.py  test_strings.py  test_utils.py  test_yara.py
tests/data/: strings.c
tests/test_emulation/: test_action_and_objects.py  test_builtin_func_decorator.py  test_call_hooks.py  test_cpu_context.py  test_emulator.py  test_flowchart.py  test_functions.py  test_memory.py  test_monitors.py  test_operands.py  test_registers.py
