[metadata]
name = rugosa
version = attr:rugosa.__version__
author = DC3
url = https://github.com/Defense-Cyber-Crime-Center/rugosa
description = The next generation of kordesii. This is a library for managing emulation and provides utilities for interfacing with decompiled malware samples using dragodis.
long-description-content-type = text/markdown
long-description = file:README.md
keywords = malware, ida, ghidra, emulation, strings
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    dragodis>=0.5.0
    click
    yara-python

[options.extras_require]
testing =
    pytest>=3.0.0

[tool:pytest]
norecursedirs = docs  build *.egg-info .git .nox .pytest_cache
testpaths = tests
addopts =
    -p no:faulthandler
#log_cli = True
#log_cli_level = DEBUG
#log_cli_format = [%(levelname)8s] %(module)-15s : %(message)s
